<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tabliczka Mnozenia</string>

    <string name="button_Play">Graj</string>
    <string name="button_Diff">Wybor poziomu</string>
    <string name="button_Achiev">Osiagniecia</string>
    <string name="button_About">O grze</string>
    <string name="button_Exit">Wyjscie</string>
    <string name="button_Menu">Menu</string>

    <string name="button_Diff1">Bardzo latwy\n
        Liczba pytan: 10\n
        Czas na odpowiedz: 30s</string>
    <string name="button_Diff2">Latwy\n
        Liczba pytan: 20\n
        Czas na odpowiedz: 20s</string>
    <string name="button_Diff3">Sredni\n
        Liczba pytan: 30\n
        Czas na odpowiedz: 15s</string>
    <string name="button_Diff4">Trudny\n
        Liczba pytan: 40\n
        Czas na odpowiedz: 10s</string>
    <string name="button_Diff5">Bardzo trudny\n
        Liczba pytan: 50\n
        Czas na odpowiedz: 5s</string>

    <string name="text_autors">Autorzy aplikacji:\n
        - Bartosz Golabek\n
        - Michal Tartanus\n</string>

    <string name="text_game">Ekran gry</string>
    <string name="text_task">Zadanie </string>
    <string name="text_answer">Odp</string>
    <string name="text_bad">ZLE!</string>
    <string name="text_good">Dobrze!</string>
    <string name="text_instruction">Dotknij i przytrzymaj oba przyciski X,
        aby zaczac rozgrywke.</string>

    <string name="button_Clear">Usun osiagniecia</string>
    <string name="text_achiev0">50% poprawnych odpowiedzi</string>
    <string name="text_achiev1">75% poprawnych odpowiedzi</string>
    <string name="text_achiev2">100% poprawnych odpowiedzi</string>
    <string name="text_achiev3">100% poprawnych odpowiedzi przez 3 dni</string>
    <string name="text_achiev4">100% poprawnych odpowiedzi przez 7 dni</string>
    <string name="text_achiev5">100% poprawnych odpowiedzi przez 14 dni w dwoch grach</string>
    <string name="text_achiev6">100% poprawnych odpowiedzi przez 30 dni w czterech grach</string>
    <string name="text_achiev7">"A imie jego bedzie czterdziesci i cztery"</string>

    <string name="text_goto_learn">Przejdz do ekranu nauki</string>
    <string name="text_learn">Ekran nauki</string>
    <string name="text_multi_instruction">Kliknij jeden z powyzszych przyciskow
        zeby zobaczyc wszystkie wyniki mnozenia danej liczby.</string>
    <string name="text_multi_begin">Wynik mnożenia:\n</string>
</resources>