<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ekran_gry"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thorin.tabliczkamnozenia.Ekran_gry$Ekran_gry">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_Diff1"
        android:id="@+id/button1"
        android:layout_weight=".2"
        android:textSize="20sp"
        android:onClick="sendDiff1" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_Diff2"
        android:id="@+id/button2"
        android:layout_weight=".2"
        android:textSize="20sp"
        android:onClick="sendDiff2" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_Diff3"
        android:id="@+id/button3"
        android:layout_weight=".2"
        android:textSize="20sp"
        android:onClick="sendDiff3" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_Diff4"
        android:id="@+id/button4"
        android:layout_weight=".2"
        android:textSize="20sp"
        android:onClick="sendDiff4" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_Diff5"
        android:id="@+id/button5"
        android:layout_weight=".2"
        android:textSize="20sp"
        android:onClick="sendDiff5" />

</LinearLayout>
